wolf/sys/third_party/librist/include/contrib/lz4/lz4frame.h


typedef size_t LZ4F_errorCode_t;
LZ4FLIB_API unsigned    LZ4F_isError(LZ4F_errorCode_t code);   
typedef enum {
    LZ4F_default=0,
    LZ4F_max64KB=4,
    LZ4F_max256KB=5,
    LZ4F_max1MB=6,
    LZ4F_max4MB=7
    LZ4F_OBSOLETE_ENUM(max64KB)
    LZ4F_OBSOLETE_ENUM(max256KB)
    LZ4F_OBSOLETE_ENUM(max1MB)
    LZ4F_OBSOLETE_ENUM(max4MB)
} LZ4F_blockSizeID_t;
typedef enum {
    LZ4F_blockLinked=0,
    LZ4F_blockIndependent
    LZ4F_OBSOLETE_ENUM(blockLinked)
    LZ4F_OBSOLETE_ENUM(blockIndependent)
} LZ4F_blockMode_t;
typedef enum {
    LZ4F_noContentChecksum=0,
    LZ4F_contentChecksumEnabled
    LZ4F_OBSOLETE_ENUM(noContentChecksum)
    LZ4F_OBSOLETE_ENUM(contentChecksumEnabled)
} LZ4F_contentChecksum_t;
typedef enum {
    LZ4F_noBlockChecksum=0,
    LZ4F_blockChecksumEnabled
} LZ4F_blockChecksum_t;
typedef enum {
    LZ4F_frame=0,
    LZ4F_skippableFrame
    LZ4F_OBSOLETE_ENUM(skippableFrame)
} LZ4F_frameType_t;
typedef struct {
  LZ4F_blockSizeID_t     blockSizeID;         
  LZ4F_blockMode_t       blockMode;           
  LZ4F_contentChecksum_t contentChecksumFlag; 
  LZ4F_frameType_t       frameType;           
  unsigned long long     contentSize;         
  unsigned               dictID;              
  LZ4F_blockChecksum_t   blockChecksumFlag;   
} LZ4F_frameInfo_t;
typedef struct {
  LZ4F_frameInfo_t frameInfo;
  int      compressionLevel;    
  unsigned autoFlush;           
  unsigned favorDecSpeed;         
  unsigned reserved[3];         
} LZ4F_preferences_t;
typedef struct LZ4F_cctx_s LZ4F_cctx;   
typedef struct {
  unsigned stableSrc;    
  unsigned reserved[3];
} LZ4F_compressOptions_t;
#define LZ4F_VERSION 100    
#define LZ4F_HEADER_SIZE_MIN  7   
#define LZ4F_HEADER_SIZE_MAX 19
LZ4FLIB_API size_t LZ4F_compressBegin(LZ4F_cctx* cctx,
                                      void* dstBuffer, size_t dstCapacity,
                                      const LZ4F_preferences_t* prefsPtr);
LZ4FLIB_API size_t LZ4F_compressBound(size_t srcSize, const LZ4F_preferences_t* prefsPtr);
LZ4FLIB_API size_t LZ4F_compressUpdate(LZ4F_cctx* cctx,
                                       void* dstBuffer, size_t dstCapacity,
                                 const void* srcBuffer, size_t srcSize,
                                 const LZ4F_compressOptions_t* cOptPtr);
LZ4FLIB_API size_t LZ4F_flush(LZ4F_cctx* cctx,
                              void* dstBuffer, size_t dstCapacity,
                        const LZ4F_compressOptions_t* cOptPtr);
LZ4FLIB_API size_t LZ4F_compressEnd(LZ4F_cctx* cctx,
                                    void* dstBuffer, size_t dstCapacity,
                              const LZ4F_compressOptions_t* cOptPtr);
typedef struct LZ4F_dctx_s LZ4F_dctx;   
typedef LZ4F_dctx* LZ4F_decompressionContext_t;   
typedef struct {
  unsigned stableDst;    
  unsigned reserved[3];  
} LZ4F_decompressOptions_t;
LZ4FLIB_API LZ4F_errorCode_t LZ4F_createDecompressionContext(LZ4F_dctx** dctxPtr, unsigned version);
LZ4FLIB_API LZ4F_errorCode_t LZ4F_freeDecompressionContext(LZ4F_dctx* dctx);
#define LZ4F_MIN_SIZE_TO_KNOW_HEADER_LENGTH 5
size_t LZ4F_headerSize(const void* src, size_t srcSize);
LZ4FLIB_API size_t LZ4F_getFrameInfo(LZ4F_dctx* dctx,
                                     LZ4F_frameInfo_t* frameInfoPtr,
                                     const void* srcBuffer, size_t* srcSizePtr);
LZ4FLIB_API size_t LZ4F_decompress(LZ4F_dctx* dctx,
                                   void* dstBuffer, size_t* dstSizePtr,
                                   const void* srcBuffer, size_t* srcSizePtr,
                                   const LZ4F_decompressOptions_t* dOptPtr);