wolf_deps/lz4/src/ffi/lz4frame.rs

extern "C" {
    #[doc = " LZ4F_compressBegin() :"]
    #[doc = "  will write the frame header into dstBuffer."]
    #[doc = "  dstCapacity must be >= LZ4F_HEADER_SIZE_MAX bytes."]
    #[doc = " `prefsPtr` is optional : you can provide NULL as argument, all preferences will then be set to default."]
    #[doc = " @return : number of bytes written into dstBuffer for the header"]
    #[doc = "           or an error code (which can be tested using LZ4F_isError())"]
    pub fn LZ4F_compressBegin(
        cctx: *mut LZ4F_cctx,
        dstBuffer: *mut ::std::os::raw::c_void,
        dstCapacity: size_t,
        prefsPtr: *const LZ4F_preferences_t,
    ) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_compressBound() :"]
    #[doc = "  Provides minimum dstCapacity required to guarantee success of"]
    #[doc = "  LZ4F_compressUpdate(), given a srcSize and preferences, for a worst case scenario."]
    #[doc = "  When srcSize==0, LZ4F_compressBound() provides an upper bound for LZ4F_flush() and LZ4F_compressEnd() instead."]
    #[doc = "  Note that the result is only valid for a single invocation of LZ4F_compressUpdate()."]
    #[doc = "  When invoking LZ4F_compressUpdate() multiple times,"]
    #[doc = "  if the output buffer is gradually filled up instead of emptied and re-used from its start,"]
    #[doc = "  one must check if there is enough remaining capacity before each invocation, using LZ4F_compressBound()."]
    #[doc = " @return is always the same for a srcSize and prefsPtr."]
    #[doc = "  prefsPtr is optional : when NULL is provided, preferences will be set to cover worst case scenario."]
    #[doc = "  tech details :"]
    #[doc = " @return if automatic flushing is not enabled, includes the possibility that internal buffer might already be filled by up to (blockSize-1) bytes."]
    #[doc = "  It also includes frame footer (ending + checksum), since it might be generated by LZ4F_compressEnd()."]
    #[doc = " @return doesn't include frame header, as it was already generated by LZ4F_compressBegin()."]
    pub fn LZ4F_compressBound(srcSize: size_t, prefsPtr: *const LZ4F_preferences_t) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_compressUpdate() :"]
    #[doc = "  LZ4F_compressUpdate() can be called repetitively to compress as much data as necessary."]
    #[doc = "  Important rule: dstCapacity MUST be large enough to ensure operation success even in worst case situations."]
    #[doc = "  This value is provided by LZ4F_compressBound()."]
    #[doc = "  If this condition is not respected, LZ4F_compress() will fail (result is an errorCode)."]
    #[doc = "  LZ4F_compressUpdate() doesn't guarantee error recovery."]
    #[doc = "  When an error occurs, compression context must be freed or resized."]
    #[doc = " `cOptPtr` is optional : NULL can be provided, in which case all options are set to default."]
    #[doc = " @return : number of bytes written into `dstBuffer` (it can be zero, meaning input data was just buffered)."]
    #[doc = "           or an error code if it fails (which can be tested using LZ4F_isError())"]
    pub fn LZ4F_compressUpdate(
        cctx: *mut LZ4F_cctx,
        dstBuffer: *mut ::std::os::raw::c_void,
        dstCapacity: size_t,
        srcBuffer: *const ::std::os::raw::c_void,
        srcSize: size_t,
        cOptPtr: *const LZ4F_compressOptions_t,
    ) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_flush() :"]
    #[doc = "  When data must be generated and sent immediately, without waiting for a block to be completely filled,"]
    #[doc = "  it's possible to call LZ4_flush(). It will immediately compress any data buffered within cctx."]
    #[doc = " `dstCapacity` must be large enough to ensure the operation will be successful."]
    #[doc = " `cOptPtr` is optional : it's possible to provide NULL, all options will be set to default."]
    #[doc = " @return : nb of bytes written into dstBuffer (can be zero, when there is no data stored within cctx)"]
    #[doc = "           or an error code if it fails (which can be tested using LZ4F_isError())"]
    #[doc = "  Note : LZ4F_flush() is guaranteed to be successful when dstCapacity >= LZ4F_compressBound(0, prefsPtr)."]
    pub fn LZ4F_flush(
        cctx: *mut LZ4F_cctx,
        dstBuffer: *mut ::std::os::raw::c_void,
        dstCapacity: size_t,
        cOptPtr: *const LZ4F_compressOptions_t,
    ) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_compressEnd() :"]
    #[doc = "  To properly finish an LZ4 frame, invoke LZ4F_compressEnd()."]
    #[doc = "  It will flush whatever data remained within `cctx` (like LZ4_flush())"]
    #[doc = "  and properly finalize the frame, with an endMark and a checksum."]
    #[doc = " `cOptPtr` is optional : NULL can be provided, in which case all options will be set to default."]
    #[doc = " @return : nb of bytes written into dstBuffer, necessarily >= 4 (endMark),"]
    #[doc = "           or an error code if it fails (which can be tested using LZ4F_isError())"]
    #[doc = "  Note : LZ4F_compressEnd() is guaranteed to be successful when dstCapacity >= LZ4F_compressBound(0, prefsPtr)."]
    #[doc = "  A successful call to LZ4F_compressEnd() makes `cctx` available again for another compression task."]
    pub fn LZ4F_compressEnd(
        cctx: *mut LZ4F_cctx,
        dstBuffer: *mut ::std::os::raw::c_void,
        dstCapacity: size_t,
        cOptPtr: *const LZ4F_compressOptions_t,
    ) -> size_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_dctx_s {
    _unused: [u8; 0],
}
pub type LZ4F_dctx = LZ4F_dctx_s;
pub type LZ4F_decompressionContext_t = *mut LZ4F_dctx;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LZ4F_decompressOptions_t {
    pub stableDst: ::std::os::raw::c_uint,
    pub reserved: [::std::os::raw::c_uint; 3usize],
}
#[test]
fn bindgen_test_layout_LZ4F_decompressOptions_t() {
    assert_eq!(
        ::std::mem::size_of::<LZ4F_decompressOptions_t>(),
        16usize,
        concat!("Size of: ", stringify!(LZ4F_decompressOptions_t))
    );
    assert_eq!(
        ::std::mem::align_of::<LZ4F_decompressOptions_t>(),
        4usize,
        concat!("Alignment of ", stringify!(LZ4F_decompressOptions_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_decompressOptions_t>())).stableDst as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_decompressOptions_t),
            "::",
            stringify!(stableDst)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<LZ4F_decompressOptions_t>())).reserved as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(LZ4F_decompressOptions_t),
            "::",
            stringify!(reserved)
        )
    );
}
extern "C" {
    #[doc = " LZ4F_createDecompressionContext() :"]
    #[doc = "  Create an LZ4F_dctx object, to track all decompression operations."]
    #[doc = "  The version provided MUST be LZ4F_VERSION."]
    #[doc = "  The function provides a pointer to an allocated and initialized LZ4F_dctx object."]
    #[doc = "  The result is an errorCode, which can be tested using LZ4F_isError()."]
    #[doc = "  dctx memory can be released using LZ4F_freeDecompressionContext();"]
    #[doc = "  Result of LZ4F_freeDecompressionContext() indicates current state of decompressionContext when being released."]
    #[doc = "  That is, it should be == 0 if decompression has been completed fully and correctly."]
    pub fn LZ4F_createDecompressionContext(
        dctxPtr: *mut *mut LZ4F_dctx,
        version: ::std::os::raw::c_uint,
    ) -> LZ4F_errorCode_t;
}
extern "C" {
    pub fn LZ4F_freeDecompressionContext(dctx: *mut LZ4F_dctx) -> LZ4F_errorCode_t;
}
extern "C" {
    #[doc = " LZ4F_headerSize() : v1.9.0+"]
    #[doc = "  Provide the header size of a frame starting at `src`."]
    #[doc = " `srcSize` must be >= LZ4F_MIN_SIZE_TO_KNOW_HEADER_LENGTH,"]
    #[doc = "  which is enough to decode the header length."]
    #[doc = " @return : size of frame header"]
    #[doc = "           or an error code, which can be tested using LZ4F_isError()"]
    #[doc = "  note : Frame header size is variable, but is guaranteed to be"]
    #[doc = "         >= LZ4F_HEADER_SIZE_MIN bytes, and <= LZ4F_HEADER_SIZE_MAX bytes."]
    pub fn LZ4F_headerSize(src: *const ::std::os::raw::c_void, srcSize: size_t) -> size_t;
}
extern "C" {
    #[doc = " LZ4F_getFrameInfo() :"]
    #[doc = "  This function extracts frame parameters (max blockSize, dictID, etc.)."]
    #[doc = "  Its usage is optional: user can call LZ4F_decompress() directly."]
    #[doc = ""]
    #[doc = "  Extracted information will fill an existing LZ4F_frameInfo_t structure."]
    #[doc = "  This can be useful for allocation and dictionary identification purposes."]
    #[doc = ""]
    #[doc = "  LZ4F_getFrameInfo() can work in the following situations :"]
    #[doc = ""]
    #[doc = "  1) At the beginning of a new frame, before any invocation of LZ4F_decompress()."]
    #[doc = "     It will decode header from `srcBuffer`,"]
    #[doc = "     consuming the header and starting the decoding process."]
    #[doc = ""]
    #[doc = "     Input size must be large enough to contain the full frame header."]
    #[doc = "     Frame header size can be known beforehand by LZ4F_headerSize()."]
    #[doc = "     Frame header size is variable, but is guaranteed to be >= LZ4F_HEADER_SIZE_MIN bytes,"]
    #[doc = "     and not more than <= LZ4F_HEADER_SIZE_MAX bytes."]
    #[doc = "     Hence, blindly providing LZ4F_HEADER_SIZE_MAX bytes or more will always work."]
    #[doc = "     It's allowed to provide more input data than the header size,"]
    #[doc = "     LZ4F_getFrameInfo() will only consume the header."]
    #[doc = ""]
    #[doc = "     If input size is not large enough,"]
    #[doc = "     aka if it's smaller than header size,"]
    #[doc = "     function will fail and return an error code."]
    #[doc = ""]
    #[doc = "  2) After decoding has been started,"]
    #[doc = "     it's possible to invoke LZ4F_getFrameInfo() anytime"]
    #[doc = "     to extract already decoded frame parameters stored within dctx."]
    #[doc = ""]
    #[doc = "     Note that, if decoding has barely started,"]
    #[doc = "     and not yet read enough information to decode the header,"]
    #[doc = "     LZ4F_getFrameInfo() will fail."]
    #[doc = ""]
    #[doc = "  The number of bytes consumed from srcBuffer will be updated in *srcSizePtr (necessarily <= original value)."]
    #[doc = "  LZ4F_getFrameInfo() only consumes bytes when decoding has not yet started,"]
    #[doc = "  and when decoding the header has been successful."]
    #[doc = "  Decompression must then resume from (srcBuffer + *srcSizePtr)."]
    #[doc = ""]
    #[doc = " @return : a hint about how many srcSize bytes LZ4F_decompress() expects for next call,"]
    #[doc = "           or an error code which can be tested using LZ4F_isError()."]
    #[doc = "  note 1 : in case of error, dctx is not modified. Decoding operation can resume from beginning safely."]
    #[doc = "  note 2 : frame parameters are *copied into* an already allocated LZ4F_frameInfo_t structure."]
    pub fn LZ4F_getFrameInfo(
        dctx: *mut LZ4F_dctx,
        frameInfoPtr: *mut LZ4F_frameInfo_t,
        srcBuffer: *const ::std::os::raw::c_void,
        srcSizePtr: *mut size_t,
    ) -> size_t;
}
